--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Main workflow
 on: push
+env: # Set the secret as an input
+  docker_username: anmoh
+  docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
+  GIT_commit: ${{ github.event_name }}
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -27,9 +31,26 @@ jobs:
           name: code
           path: .
       - name: run linting
-        uses: super-linter/super-linter/slim@v4
+        uses: super-linter/super-linter/slim@v7
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DISABLE_ERRORS: true  
+          DISABLE_ERRORS: true 
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
+      packages: write
+    steps:
+      - name: Downloading code
+        uses: actions/download-artifact@v4
+        with: 
+          name: code
+          path: .
+
+      - name: build docker
+        run: bash ci/build-docker.sh
+      - name: push docker
+        run: bash ci/push-docker.sh
+
 
