--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Main workflow
 on: push
 env: # Set the secret as an input
-  docker_username: anmoh
+  docker_username: ${{ github.actor }}
   docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
   GIT_commit: ${{ github.event_name }}
 jobs:
@@ -21,6 +21,7 @@ jobs:
           name: code
           path: .
           include-hidden-files: true
+          
   Linting:
     runs-on: ubuntu-latest
     needs: [Build]
@@ -36,6 +37,7 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_ERRORS: true 
+          
   Docker-image:
     runs-on: ubuntu-latest
     needs: [Build]
