--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,16 @@
-name: Main workflow
-on: push
+name: Main-workflow
 env: # Set the secret as an input
   docker_username: anya-ayob
   docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
   GIT_commit: ${{ github.sha }}
+
+on:
+  push:
+    branches: main
+  pull_request:
+    branches: main
+  workflow_dispatch: 
+
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -11,10 +18,13 @@ jobs:
     steps:
       - name: Clone down repository
         uses: actions/checkout@v5    
+        
       - name: Build the application
         run: ci/build-app.sh
+        
       - name: Test
         run: ci/unit-test-app.sh
+        
       - name: Upload repo
         uses: actions/upload-artifact@v4
         with: 
@@ -39,21 +49,22 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_ERRORS: true 
           
-  Docker-image:
+  Dockerimage:
     runs-on: ubuntu-latest
     needs: [Build]
     permissions:
       packages: write
     steps:
-      - name: Downloading code
+      - name: Download code for container
         uses: actions/download-artifact@v4
-        with: 
+        with:
           name: code
           path: .
 
-      - name: build docker
+      - name: Build docker
         run: bash ci/build-docker.sh
-      - name: push docker
+        
+      - name: Push docker
         run: bash ci/push-docker.sh
 
 
